--- a/styles/components/ui/PollCard.module.css
+++ b/styles/components/ui/PollCard.module.css
@@ -1,13 +1,47 @@
 .pollCard {
-    background: rgba(255, 255, 255, 0.1);
-    padding: 15px;
+    background-color: white;
     border-radius: 8px;
-    margin-bottom: 10px;
-    aspect-ratio: 1; /* make the cards square */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Drop shadow */
+    padding: 20px;
+    text-align: center;
+    transition: box-shadow 0.3s ease;
+  }
+  
+  .pollCard:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Larger shadow on hover */
+  }
+  
+  .cardContent {
+    opacity: 1;
+    transition: opacity 0.5s ease, transform 0.3s ease;
+  }
+  
+  .viewVoteButton {
+    background-color: #0073e6;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+  }
+  
+  .viewVoteButton:hover {
+    background-color: #005bb5;
   }
   
   .voteContainer {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 10px;
   }
+  
+  .voteButton {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+  }
+  
+  .voteCount {
+    margin-left: 5px;
+  }
+  
