--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,3 +111,13 @@ button:hover {
   background-color: #FFFFFF;
   color: #000000;
 }
+
+textarea {
+  height: 60px;
+  font-size: 14px;
+  padding: 5px;
+  margin-top: 5px;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
